--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="30dp"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,6 +15,7 @@
         android:text="@string/select_recipe_category1"
         android:textSize="20sp"
         android:textStyle="bold" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,8 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:text="@string/non_vegetarian3" />
-
     </LinearLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -72,6 +74,7 @@
             android:text="@string/basil4" />
     </RadioGroup>
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -86,6 +89,7 @@
         android:max="10"
         android:layout_marginBottom="16dp" />
 
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -98,9 +102,11 @@
         android:id="@+id/switch_mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/easy_mode1"
         android:layout_marginBottom="16dp"
+        android:minHeight="48dp"
+        android:text="@string/easy_mode1"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -118,10 +124,11 @@
         android:stepSize="1"
         android:layout_marginBottom="16dp" />
 
+
     <Button
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:text="@string/submit1" />
 
 </LinearLayout>
